# zephyr

drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.disk  flash_disk.c
dts/bindings/flash_controller/: zephyr,disk-flash.yaml
samples/drivers/flash_disk/: README.rst  app.overlay  prj.conf  sample.yaml
samples/drivers/flash_disk/flash_disk_mcuboot/: CMakeLists.txt  README.rst  nrf52dk_nrf52832.overlay  prj.conf
samples/drivers/flash_disk/flash_disk_mcuboot/src/: main.c  secondary.c
samples/drivers/flash_disk/flash_disk_mcuboot/sysbuild/: mcuboot.conf
samples/drivers/flash_disk/flash_disk_ramdisk/: CMakeLists.txt  README.rst  app.overlay  prj.conf
samples/drivers/flash_disk/flash_disk_ramdisk/src/: main.c
samples/drivers/flash_disk/src/: main.c
subsys/fs/: fat_fs.c
